The black hole doesnt crash and does something. blocks seem to swirl around the black hole but invisibly